--- a/spriteMaker/spriteMaker/Base.lproj/Main.storyboard
+++ b/spriteMaker/spriteMaker/Base.lproj/Main.storyboard
@@ -56,6 +56,7 @@
                                                         </state>
                                                         <connections>
                                                             <action selector="tappedDrawBtn:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Sb0-Np-erE"/>
+                                                            <action selector="touchDownDrawBtn:" destination="BYZ-38-t0r" eventType="touchDown" id="XxL-dt-p7v"/>
                                                         </connections>
                                                     </button>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YZ8-cM-imq">
